--- a/frontend/src/app/components/sourceComponents/noParentOnes/pic-form-to64/pic-form-to64.component.css
+++ b/frontend/src/app/components/sourceComponents/noParentOnes/pic-form-to64/pic-form-to64.component.css
@@ -6,8 +6,8 @@ form {
     margin: 0.25rem;
 }
 
-mat-card {
-    width: 50%;
+form textarea {
+    overflow: hidden;
 }
 
 button {
