--- a/frontend/src/app/components/template/nav/nav.component.css
+++ b/frontend/src/app/components/template/nav/nav.component.css
@@ -1,5 +1,8 @@
 .nav{
     /* position: fixed; */
+    position: sticky;
+    top: 0;
+    z-index: 100;
     display: flex;
     align-items: center;
     background-color: #BA151B;    
